# exa-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INCLUDE_EXCLUDE_URLS_CHANGES.md  LICENSE  Makefile  QUICKSTART.md  README.md  WEBSETS_UPDATE_SUMMARY.md  autogen_sdk.py  autogen_sdk_claude.py  mypy.ini  new_openapi.yaml  old_openapi.yaml  publish.sh  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  setup.py  types.py  webset_person_properties_research.md
.github/workflows/: gen_sdk.yml  publish_on_tag.yml  release-please.yml  run_examples.yml  run_tests.yml  update_sdk.yaml
docs/: conf.py  metaphor_python.rst  modules.rst  python-sdk-specification.mdx  repair_markdown_docs.py
exa_py/: __init__.py  api.py  api3.py  exceptions.py  utils.py
exa_py/agent/: __init__.py  async_base.py  async_client.py  base.py  client.py  types.py  utils.py
exa_py/monitors/: __init__.py  async_base.py  async_client.py  base.py  client.py  types.py
exa_py/research/: __init__.py  async_client.py  base.py  client.py  models.py  sync_client.py  utils.py
exa_py/responses/: __init__.py  client.py  types.py
exa_py/websets/: __init__.py  async_client.py  client.py  types.py
examples/: answer_example.py  basic_content_retrieval.py  basic_filter.py  basic_find_similar.py  basic_search.py  chat_completion.py  company_research_url_filtering.py  extras_example.py  livecrawl_example.py  pydantic_answer_example.py  pydantic_research_example.py  pydantic_schema_example.py  pydantic_summary_example.py  researcher.ipynb  schema_summary_example.py  snippet_search.py  structured_output_roundtrip_example.py  subpages_example.py  url_filtering_example.py
examples/Exa-Groq-Company-Website-Analysis/: README.md  app.py  requirements.txt
examples/async/: answer_example.py  basic_search.py  chat_completion.py  extras_example.py  livecrawl_example.py  schema_summary_example.py  subpages_example.py
examples/newssummarizer/: summarizer.ipynb  summarizer.md  summarizer.py
examples/rag/: Exa_RAG.ipynb  Exa_RAG.md  Exa_RAG.py  Exa_RAG_responses.py  Exa_responses_RAG.md
examples/research/: async_example.py  listing_example.py  schema_example.py  simple_example.py  streaming_example.py  sync_example.py
examples/researcher/: researcher.ipynb  researcher.py
examples/websets/: async_example.py  create_example.py  exclude_example.py  (+5 more)
metaphor_python/: __init__.py  api.py
scripts/: gen_config.json  generate_docs.py
tests/: test_async_websets.py  test_filter.py  test_monitors.py  test_pydantic_schemas.py  test_search_api.py  test_streams.py  test_url_filters_unit.py  test_websets.py  test_websets_events.py  test_websets_imports.py  test_websets_monitors.py  test_websets_priority.py
(+58 files in other folders)
