[tool.poetry]
name = "exa-py"
version = "1.11.0"
description = "Python SDK for Exa API."
authors = ["Exa AI <hello@exa.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
typing-extensions = "^4.12.2"
openai = "^1.48"
pydantic = "^2.10.6"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
setuptools = "^74.0.0"
docutils = "^0.21.2"
twine = "^5.1.1"
datamodel-code-generator = "^0.28.4"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[project]
name = "exa-py"
version = "1.11.0"
description = "Python SDK for Exa API."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Exa AI", email = "hello@exa.ai"}
]
dependencies = [
    "requests>=2.32.3",
    "typing-extensions>=4.12.2",
    "openai>=1.48",
    "pydantic>=2.10.6",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
]
