[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
typing-extensions = "^4.12.2"
openai = "^1.48"
pydantic = "^2.10.6"
httpx = "^0.28.1"
httpcore = "^1.0.9"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.1"
docutils = "^0.21.2"
twine = "^5.1.1"
datamodel-code-generator = "^0.28.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "exa-py"
version = "1.16.1"
description = "Python SDK for Exa API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Exa AI", email = "hello@exa.ai" }]
dependencies = [
    "requests>=2.32.3",
    "typing-extensions>=4.12.2",
    "openai>=1.48",
    "pydantic>=2.10.6",
    "httpx>=0.28.1",
    "httpcore>=1.0.9",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
